[package]
name = "tax_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
tokio = {version = "1.12.0", features = ["full"]}
futures = "0.3"
image = "0.24.7"
mysql = "24.0.0"
itertools = "0.12.0"
chrono = "0.4.31"